--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
-    "husky": "^6.0.0",
+    "husky": "4.3.8",
     "jest": "^27.0.4",
     "mongodb-memory-server": "^6.9.6",
     "nodemon": "^2.0.7",
