--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^27.0.4",
     "mongodb-memory-server": "^6.9.6",
     "nodemon": "^2.0.7",
+    "prettier": "^2.3.1",
     "pretty-quick": "^3.1.0",
     "supertest": "^6.1.3",
     "ts-node": "^10.0.0",
