--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "start-dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "testd": "jest --detectOpenHandles",
+    "testc": "jest --coverage --watchAll"
   },
   "husky": {
     "hooks": {
@@ -16,13 +18,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.14.5",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "husky": "4.3.8",
     "jest": "^27.0.4",
     "mongodb-memory-server": "^6.9.6",
@@ -30,6 +37,7 @@
     "prettier": "^2.3.1",
     "pretty-quick": "^3.1.0",
     "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
