--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.13",
-    "uuid": "^8.3.2"
+    "mongoose": "^5.12.13"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
