--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "start-dev": "nodemon src/index.ts",
+    "lint": "eslint --ignore-path .gitignore .",
     "test": "jest --watchAll",
     "testd": "jest --detectOpenHandles --watchAll",
-    "testc": "jest --coverage --watchAll",
-    "lint": "eslint src"
+    "testc": "jest --coverage --watchAll"
   },
   "husky": {
     "hooks": {
@@ -32,6 +32,9 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "eslint": "^7.31.0",
     "husky": "4.3.8",
     "jest": "^27.0.4",
     "mongodb-memory-server": "^6.9.6",
@@ -41,7 +44,6 @@
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.3.2"
   }
 }
